--- a/index.html
+++ b/index.html
@@ -24,13 +24,29 @@ Realtime Image Identification
     Model is trained on
 <br>
 <div class="btn btn-warning heading_div2">
-Photoframe|Penstand|Charger|Clock|Phone|
+Photoframe|Penstand|Charger|Clock|Laamp|
   </div>
 </center>
 <br>
     </h3>
 <br><br>
   </center>
+ <center>
+   <p class=" btn btn-warning result_para_footer "> Object:
+     <span id="result_object_name">
+
+     </span>
+   </p>
+   <br> <br>
+   <p class=" btn btn-warning result_para_footer"> Accuracy:
+     <span id="result_object_accuracy"></span>
+   </p>
+   <br>
+ </center>
+
+ <div class="copy_rght_footer">
+Devoloped by Prisha Sunkari with the help of Teacher Karishma Arivnd Thakor mam.
+ </div>
 <script src="main.js"></script>
 </body>
 
